--- a/index.html
+++ b/index.html
@@ -1,92 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Bootstrap email</title>
-
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles.css">
-
-
-    </head>
-    <body>
-        <!-- Top Navigation Bar -->
-        <nav class="navbar navbar-expand-lg">
-            <div class="navbar-content">
-                <h3 class="navbar-brand">Name of app</h3>
-                <input class="text" id="searchBar" type="search" placeholder="Search bar" aria-label="Search">
-            </div>
-        </nav>
-        
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bootstrap email</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <!-- Top Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container-fluid">
-            <div class="row">
-            
-                <!-- Sidebar Menu -->
-                    <div class="col-md-2">
-                        <div class="list-group">
-                            <a href="#" class="list-group-item list-group-item-action">Profile</a>
-                            <a href="#" class="list-group-item list-group-item-action">Inbox</a>
-                            <a href="#" class="list-group-item list-group-item-action">Drafts</a>
-                            <a href="#" class="list-group-item list-group-item-action">Sent</a>
-                        </div>
+            <a class="navbar-brand" href="#">Name of app</a>
+            <form class="d-flex ms-auto order-lg-2">
+                <input class="form-control me-2" type="search" placeholder="Search bar" aria-label="Search">
+            </form>
+            <button class="navbar-toggler order-lg-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse order-lg-3" id="navbarNav">
+                <!-- Sidebar Menu for Mobile -->
+                <div class="d-lg-none">
+                    <div class="list-group">
+                        <a href="#" class="list-group-item list-group-item-action">Profile</a>
+                        <a href="#" class="list-group-item list-group-item-action">Inbox</a>
+                        <a href="#" class="list-group-item list-group-item-action">Drafts</a>
+                        <a href="#" class="list-group-item list-group-item-action">Sent</a>
                     </div>
-
-                <div class="col-md-7">
-                    <!-- Email List Area -->
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th scope="col">From</th>
-                                <th scope="col">Subject</th>
-                                <th scope="col">Date</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr id="selected">
-                                <td>example1@example.com</td>
-                                <td>Subject 1</td>
-                                <td>2024-08-06</td>
-                            </tr>
-                            <tr>
-                                <td>example2@example.com</td>
-                                <td>Subject 2</td>
-                                <td>2024-08-05</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                    <!-- Email Form Area -->
-                    <form>
-                        <!-- To Address Input -->
-                        <div class="form-group">
-                            <label for="toAddress">To address:</label>
-                            <input type="email" class="form-control" id="toAddress" name="toAddress">
-                        </div>
-                        <!-- From Address Input -->
-                        <div class="form-group">
-                            <label for="fromAddress">From address:</label>
-                            <input type="email" class="form-control" id="fromAddress" name="fromAddress">
-                        </div>
-                        <!-- Email Text Area -->
-                        <div class="form-group">
-                            <label for="emailContent">Email:</label>
-                            <textarea class="form-control" id="emailContent" rows="10"></textarea>
-                        </div>
-                        <!-- Buttons -->
-                        <button type="submit" class="btn btn-primary">Send</button>
-                        <button type="button" class="btn btn-secondary">Discard</button>
-                    </form>
-                </div>
-                <!-- Ad space -->
-                <div class="col-md-1">
-                    <h4>Ad Space</h4>
-                    <p>Ad goes here</p>
                 </div>
             </div>
         </div>
+    </nav>
 
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-    </body>
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Sidebar Menu -->
+            <div class="col-12 col-md-2 col-lg-2 collapse d-md-none d-lg-block" id="sidebarMenu">
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action">Profile</a>
+                    <a href="#" class="list-group-item list-group-item-action">Inbox</a>
+                    <a href="#" class="list-group-item list-group-item-action">Drafts</a>
+                    <a href="#" class="list-group-item list-group-item-action">Sent</a>
+                </div>
+            </div>
+
+            <!-- Email List Area -->
+            <div class="col-12 col-md-10 col-lg-7">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th scope="col">From</th>
+                            <th scope="col">Subject</th>
+                            <th scope="col">Date</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr id="selected">
+                            <td>example1@example.com</td>
+                            <td>Subject 1</td>
+                            <td>2024-08-06</td>
+                        </tr>
+                        <tr>
+                            <td>example2@example.com</td>
+                            <td>Subject 2</td>
+                            <td>2024-08-05</td>
+                        </tr>
+                    </tbody>
+                </table>
+                <!-- Email Form Area -->
+                <form>
+                    <div class="form-group">
+                        <label for="toAddress">To address:</label>
+                        <input type="email" class="form-control" id="toAddress" name="toAddress">
+                    </div>
+                    <div class="form-group">
+                        <label for="fromAddress">From address:</label>
+                        <input type="email" class="form-control" id="fromAddress" name="fromAddress">
+                    </div>
+                    <div class="form-group">
+                        <label for="emailContent">Email:</label>
+                        <textarea class="form-control" id="emailContent" rows="10"></textarea>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Send</button>
+                    <button type="button" class="btn btn-secondary">Discard</button>
+                </form>
+            </div>
+
+            <!-- Ad space -->
+            <div class="col-12 col-md-2 col-lg-3">
+                <h4>Ad Space</h4>
+                <p>Ad goes here</p>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
+</body>
 </html>
