--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                             <td>Subject 2</td>
                             <td>2024-08-05</td>
                         </tr>
+                        <tr>
+                            <td>example3@example.com</td>
+                            <td>Subject 3</td>
+                            <td>2024-08-05</td>
+                        </tr>
                     </tbody>
                 </table>
                 <!-- Email Form Area -->
@@ -80,7 +85,21 @@
                     </div>
                     <div class="form-group">
                         <label for="emailContent">Email:</label>
-                        <textarea class="form-control" id="emailContent" rows="10"></textarea>
+                        <textarea class="form-control" id="emailContent" rows="10">
+Dear [Recipient],
+
+I hope this email finds you well. I am writing to inform you about the latest updates regarding our project. We have made significant progress and would like to share the details with you.
+
+Key Highlights:
+- Project Phase 1 completed successfully.
+- New features added to enhance user experience.
+- Upcoming milestones and deadlines.
+
+Please let us know if you have any questions or need further information.
+
+Best regards,
+[Your Name]
+                        </textarea>
                     </div>
                     <button type="submit" class="btn btn-primary">Send</button>
                     <button type="button" class="btn btn-secondary">Discard</button>
